Cambios EJB AndresPineda 02 - 09 - 2013

--- a/DesignerRHN/DesignerRHN-war/web/EmplLegislacionLaboral.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplLegislacionLaboral.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Históricos Legislaciones Laborales" style=" font-size: 12px; position: absolute; width: 685px; height: 440px; left: 300px; text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Históricos Legislaciones Laborales" style=" font-size: 12px; position: absolute; width: 685px; height: 440px; text-align: left" >  
 
                         <h:outputText id="btn" style="position: absolute; left: 25px; top: 40px; background-image: url(Imagenes/icon-question-big.png); width:60px ;height:60px; background-repeat: no-repeat; background-size: 100% 100%; "/>
                         <p:tooltip style="font-size: 12px" for="btn" value="Ingrese la legislación laboral, esta puede ser una convención, de ley, etc." showEffect="slide" hideEffect="slide"/>
