--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
@@ -12,7 +12,7 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Historia Tipo Trabajador" style=" font-size: 12px; position: absolute; width: 685px; height: 545px; left: 300px; top: 105px; text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Historia Tipo Trabajador" style=" font-size: 12px; position: absolute; width: 685px; height: 545px;  text-align: left" >  
 
                         <h:outputText id="btn" style="position: absolute; left: 25px; top: 40px; background-image: url(Imagenes/icon-question-big.png); width:60px ;height:60px; background-repeat: no-repeat; background-size: 100% 100%; "/>
                         <p:tooltip style="font-size: 12px" for="btn" value="Ingrese el tipo de trabajador, puede utilizar la lista de valores; si el empleado es Pensionado o Retirado utilice los botones continuos para ingresar los datos faltantes" showEffect="slide" hideEffect="slide"/>
